ListGrid enhancement: 1. Support: no result found 2. Fix header column line wrap 3. Displace id, name, type .... on <tr> <td> 4. Fix ListGrid resize bug: 	a. data range wont update 	b. enlarge the window will not enlarge the listgrid 5. Fix footer bar data range issue: showing NaN, Infinate ...

--- a/admin-site/src/main/resources/webcontent/admin_style/template/css/component/grid/listgrid.css
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/css/component/grid/listgrid.css
@@ -36,6 +36,10 @@ div.listgrid-header-wrapper table > thead{
      border-top: 1px solid #DDD;
      */
 }
+div.listgrid-header-wrapper thead tr>th.listgrid-column{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 div.listgrid-header-wrapper thead tr>th.listgrid-column .listgrid-column-title{
     display: inline;
 }
@@ -144,4 +148,13 @@ div.listgrid-container > div.listgrid-body-wrapper .viewport .overview {
 i.listgrid-table-spinner{
     position: absolute;
     font-size: 20px;
+}
+
+td.list-grid-no-results{
+    margin-bottom: 18px;
+    text-align: center;
+}
+
+div.listgrid-container div.listgrid-body-wrapper.scrollable.default-skin {
+    padding-bottom: 0px;
 }
